[project]
name = "data-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "country-converter>=1.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
